--- a/frontend/src/components/ButtonPanel/ButtonPanel.css
+++ b/frontend/src/components/ButtonPanel/ButtonPanel.css
@@ -29,7 +29,7 @@
 /* Botón Subir Archivo */
 .upload-btn {
   background-color: #26425A;
-  color: #E1CBD7;
+  color:  #e9967a
 }
 
 .upload-btn:hover {
@@ -40,7 +40,7 @@
 /* Botón Descargar Archivo */
 .download-btn {
   background-color: #1B2939;
-  color: #C3EBB4;
+  color:   #E1CBD7;
 }
 
 .download-btn:hover {
